java/java-tests/testData/codeInsight/daemonCodeAnalyzer/quickFix/suppressModuleInfoInspections/module-info.java
/**
 * {@linkplain <error descr="Cannot resolve symbol 'nothing'"><caret>nothing</error>}
 */
module com.suppress.test.test.test {

}